k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incur-data
  labels:
    name: incur-data
    environment: production
